# tijara

./: .gitignore  README.md  cache_all_screenings.py  pyproject.toml  refresh_quarterly.py
aaoifi/: __init__.py  constants.py  contractual.py  data.py  models.py  qualitative.py  quantitative.py  report.py  screener.py  tangibility.py  zakah.py
docs/: DOCS.md
tests/: test_contractual.py  test_qualitative.py  test_quantitative.py  test_screener.py  test_tangibility.py  test_zakah.py
web/: .gitignore  .vercelignore  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/screen/: route.ts
web/app/api/subscribe/: route.ts
web/app/components/: About.tsx  ContractValidator.tsx  LegalLayout.tsx  NewsletterPopup.tsx  Standards.tsx  StockScreener.tsx  ThemeToggle.tsx  ViolationList.tsx  ZakahCalculator.tsx
web/app/cookies/: page.tsx
web/app/fast/: page.tsx
web/app/privacy/: page.tsx
web/app/terms/: page.tsx
web/lib/: constants.ts  engine.ts  supabase.ts  types.ts
