[project]
name = "aaoifi"
version = "0.1.0"
description = "AAOIFI-Compliant Shari'ah Compliance Engine"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "yfinance>=0.2",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
